--- a/.gitignore
+++ b/.gitignore
@@ -268,4 +268,6 @@ dmypy.json
 pyvenv.cfg
 pip-selfcheck.json
 
+.idea
+
 # End of https://www.toptal.com/developers/gitignore/api/python,pycharm,linux,venv
